# MTS-LitRecs

./: README.md  pyproject.toml
dataset/preprocessed_datasets/: preprocessed_users.pkl
notebooks/: EDA.ipynb  preprocessing.ipynb
src /models/: baseline.py
src /utils/: metrics.py
